ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: "/"   
            pathType: Prefix   
            backend:
              service:
                name: hello-world-svc
                port:
                  number: 8081
